Update: changes to the layout

--- a/transpu/templates/evaluacion.html
+++ b/transpu/templates/evaluacion.html
@@ -1,1 +1,15 @@
 {% extends "level2Template.html" %}
+
+
+
+
+{% block left %}
+	<div class="span3 bs-docs-sidebar">
+		<ul class="nav nav-list bs-docs-sidenav affix">
+			<li class="active"><a href="#dropdowns"><i class="icon-chevron-right"></i> Calificar Administrador</a></li>
+			<li class=""><a href="#dropdowns"><i class="icon-chevron-right"></i> Calificar Concecionario</a></li>
+			<li class=""><a href="#dropdowns"><i class="icon-chevron-right"></i> Calificar Chofer</a></li>
+			<li class=""><a href="#buttonGroups"><i class="icon-chevron-right"></i> Calificar Unidad de Transporte</a></li>
+		</ul>
+	</div>
+{% endblock %}
