--- a/transpu/templates/level2Template.html
+++ b/transpu/templates/level2Template.html
@@ -37,13 +37,14 @@
 						<li class="{{ topMenu.entidades.class }}">
 							<a href="./entidades.html">Entidades</a>
 						</li>
-						<li>
+						<li class="{{ topMenu.evaluacion.class }}">
 							<a href="./evaluacion.html">Evaluaci&oacute;n</a>
 						</li>
-						<li>
+						<li class="{{ topMenu.reportes.class }}">
 							<a href="./reportes.html">Reportes</a>
 						</li>
 					</ul>
+					<!--
 					<div id="twitter-share" class="pull-right">
 						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://addyosmani.github.com/jquery-ui-bootstrap/" data-text="A new jQuery UI Bootstrap theme" data-via="addyosmani" data-size="large">Tweet</a>
 						<script>
@@ -52,6 +53,7 @@
 							*/
 						</script>
 					</div>
+					-->
 				</div>
 			</div>
 		</div>
