--- a/transpu/templates/entidades.html
+++ b/transpu/templates/entidades.html
@@ -2,23 +2,38 @@
 
 
 {% block left %}
-
 	<div class="span3 bs-docs-sidebar">
 		<ul class="nav nav-list bs-docs-sidenav affix">
-			<li class="active"><a href="#dropdowns"><i class="icon-chevron-right"></i> Inicio</a></li>
-			<li class=""><a href="#dropdowns"><i class="icon-chevron-right"></i> Administradores Master</a></li>
-			<li class=""><a href="#dropdowns"><i class="icon-chevron-right"></i> Administradores</a></li>
-			<li class=""><a href="#buttonGroups"><i class="icon-chevron-right"></i> Concecionarios</a></li>
-			<li class=""><a href="#buttonDropdowns"><i class="icon-chevron-right"></i> Choferes</a></li>
-			<li class=""><a href="#buttonDropdowns"><i class="icon-chevron-right"></i> Unidades de Transporte</a></li>
+			<li class="active"><a href="#inicio"><i class="icon-chevron-right"></i> Inicio</a></li>
+			<li class=""><a href="#administradoresMaster"><i class="icon-chevron-right"></i> Administradores Master</a></li>
+			<li class=""><a href="#administradores"><i class="icon-chevron-right"></i> Administradores</a></li>
+			<li class=""><a href="#concecionarios"><i class="icon-chevron-right"></i> Concecionarios</a></li>
+			<li class=""><a href="#choferes"><i class="icon-chevron-right"></i> Choferes</a></li>
+			<li class=""><a href="#unidadesTransporte"><i class="icon-chevron-right"></i> Unidades de Transporte</a></li>
 		</ul>
 	</div>
-
 {% endblock %}
 
 
 {% block content %}
-content
+	<section id="inicio">
+
+	</section>
+	<section id="administradoresMaster">
+
+	</section>
+	<section id="administradores">
+
+	</section>
+	<section id="concecionarios">
+
+	</section>
+	<section id="choferes">
+
+	</section>
+	<section id="unidadesTransporte">
+
+	</section>
 {% endblock %}
 
 
